change up the YAML to unfuck some stuff

--- a/beers.yaml
+++ b/beers.yaml
@@ -31,7 +31,7 @@ UK:
     percentage: 4.0
   - title: 'Kronenbourg'
     description: "1664: Love that fucking date"
-    percentage: 5/0
+    percentage: 5.0
   - title: 'Coors Light'
     description: "Some American beer my friend"
     percentage: 4.2
